examples/type_system/failing/96_hm_fun_param_mismatch_contextual.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E300: function-type parameter mismatch should report parameter-specific diagnostics.
fn takes_int(x: Int) -> Int {
    x
}

fn takes_string(x: String) -> Int {
    0
}

fn main() -> Unit {
    let _f = if true {
        takes_int
    } else {
        takes_string
    }
}
